# 2d-Shapes

./: CMakeLists.txt  circle.cpp  circle.h  complexShape.cpp  complexShape.h  display.cpp  display.h  graphicalDisplay.cpp  graphicalDisplay.h  parallelogram.cpp  parallelogram.h  shape.cpp  shape.h  textDisplay.cpp  textDisplay.h  triangle.cpp  triangle.h
